# prometheus-qbittorrent-exporter

./: Cargo.toml  Makefile  README.md
.github/workflows/: release.yml
src/: cli.rs  main.rs  metrics.rs
