[package]
name = "prometheus-qbittorrent-exporter"
version = "0.2.0"
edition = "2021"

[dependencies]
log = "0.4.26"
env_logger = "0.11.7"

qbit-rs = "0.4.6"
prometheus-client = "0.23.1"

clap = { version = "4.5.32", features = ["derive"] }
reqwest = "0.12.14"

futures-util = "0.3.31"
tokio = { version = "1.44", features = ["rt"] }

tiny_http = "0.12.0"
