[package]
name = "prometheus-qbittorrent-exporter"
version = "0.3.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
log = "0.4.28"
env_logger = "0.11.8"

qbit-rs = "0.4.7"
prometheus-client = "0.24.0"

clap = { version = "4.5.50", features = ["derive"] }
reqwest = "0.12.24"

futures-util = "0.3.31"
tokio = { version = "1.45", features = ["rt"] }

tiny_http = "0.12.0"
